# aid

./: .env.example  .gitignore  CONTRIBUTING.md  ENV.md  README.md  aid.spec  config.toml  config.toml.example  pyproject.toml
configs/: config.yml
hooks/: hook-gradio.py
src/: config.py  main.py
src/agent/: base.py  react_agent.py
src/llm/: client.py
src/tool/: __init__.py  datetime_tool.py  location_tool.py  memory_tool.py  report_parser.py  search_tool.py
src/ui/: streamlit_app.py
